[gd_scene load_steps=21 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_03.png" type="Texture" id=2]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_48.png" type="Texture" id=3]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_22.png" type="Texture" id=4]
[ext_resource path="res://UI/menu_novo2.0/elements.png" type="Texture" id=5]
[ext_resource path="res://fonts/base_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_64.png" type="Texture" id=7]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_65.png" type="Texture" id=8]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_71.png" type="Texture" id=9]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_72.png" type="Texture" id=10]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_69.png" type="Texture" id=11]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_70.png" type="Texture" id=12]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_08.png" type="Texture" id=13]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_09.png" type="Texture" id=14]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_67.png" type="Texture" id=15]
[ext_resource path="res://UI/menu_novo2.0/menu_novo4.0_68.png" type="Texture" id=16]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_21.png" type="Texture" id=17]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_15.png" type="Texture" id=18]
[ext_resource path="res://UI/menu_novo2.0/menu_novo_16.png" type="Texture" id=19]
[ext_resource path="res://menu/default_nova_theme.tres" type="Theme" id=20]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="base" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -514.0
margin_top = -302.0
margin_right = 1.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="degra" type="NinePatchRect" parent="base"]
margin_left = 3.0
margin_top = 1.0
margin_right = 515.0
margin_bottom = 300.0
texture = ExtResource( 3 )

[node name="base2" type="NinePatchRect" parent="base/degra"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -166.0
margin_top = 25.0
margin_right = 161.0
margin_bottom = 279.0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="menu_novo_48" type="Sprite" parent="base/degra/base2"]
position = Vector2( 163.227, 126.914 )
scale = Vector2( 20.1224, 15.5699 )
texture = ExtResource( 3 )

[node name="elements" type="Sprite" parent="base/degra/base2"]
position = Vector2( 78.668, 143.103 )
scale = Vector2( 4.88751, 4.88751 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="base/degra/base2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -126.0
margin_right = -24.5
margin_bottom = -110.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.980469, 0.96875, 1 )
custom_colors/font_color_shadow = Color( 0.585938, 0.342965, 0.224304, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 0
text = "Nova"

[node name="novo_jogo" type="TextureButton" parent="base/degra/base2"]
margin_left = 102.0
margin_top = 64.0
margin_right = 166.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="sair" type="TextureButton" parent="base/degra/base2"]
margin_left = 101.0
margin_top = 203.0
margin_right = 165.0
margin_bottom = 219.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="op" type="TextureButton" parent="base/degra/base2"]
margin_left = 101.0
margin_top = 155.0
margin_right = 165.0
margin_bottom = 171.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="base3" type="NinePatchRect" parent="base/degra/base2/op"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -89.0
margin_top = -82.0
margin_right = 92.0
margin_bottom = 53.0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="menu_novo_48" type="Sprite" parent="base/degra/base2/op/base3"]
position = Vector2( 90.6031, 67.1568 )
scale = Vector2( 11.0444, 8.10026 )
texture = ExtResource( 3 )

[node name="elements" type="Sprite" parent="base/degra/base2/op/base3"]
position = Vector2( 36.5405, 100.975 )
scale = Vector2( 2.25454, 2.25454 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="base/degra/base2/op/base3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -66.5
margin_right = -0.5
margin_bottom = -50.5
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.980469, 0.96875, 1 )
custom_colors/font_color_shadow = Color( 0.585938, 0.342965, 0.224304, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 0
text = "Opções"

[node name="CheckButton" type="CheckButton" parent="base/degra/base2/op/base3"]
margin_left = 54.0
margin_top = 66.0
margin_right = 197.0
margin_bottom = 106.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
custom_constants/hseparation = 0
text = "Auto Save"

[node name="TextureButton" type="TextureButton" parent="base/degra/base2/op/base3"]
margin_left = 160.0
margin_top = 3.0
margin_right = 176.0
margin_bottom = 19.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="300sg" type="CheckBox" parent="base/degra/base2/op/base3"]
margin_left = 47.0
margin_top = 81.0
margin_right = 143.0
margin_bottom = 105.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 6 )
pressed = true
text = "5  Minutos"

[node name="600sg" type="CheckBox" parent="base/degra/base2/op/base3"]
margin_left = 91.0
margin_top = 81.0
margin_right = 191.0
margin_bottom = 105.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 6 )
text = "10  Minutos"

[node name="load" type="TextureButton" parent="base/degra/base2"]
editor/display_folded = true
margin_left = 69.0
margin_top = 100.0
margin_right = 133.0
margin_bottom = 116.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )

[node name="base4" type="NinePatchRect" parent="base/degra/base2/load"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = -34.0
margin_right = 218.0
margin_bottom = 179.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="menu_novo_48" type="Sprite" parent="base/degra/base2/load/base4"]
position = Vector2( 136.257, 103.815 )
scale = Vector2( 16.7362, 12.9378 )
texture = ExtResource( 3 )

[node name="elements" type="Sprite" parent="base/degra/base2/load/base4"]
position = Vector2( 73.4595, 91.7035 )
scale = Vector2( 4.6429, 4.64289 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="base/degra/base2/load/base4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -67.5
margin_right = 51.5
margin_bottom = -51.5
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.980469, 0.96875, 1 )
custom_colors/font_color_shadow = Color( 0.585938, 0.342965, 0.224304, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 0
text = "Carregar / Salvar"

[node name="fechar_load" type="TextureButton" parent="base/degra/base2/load/base4"]
margin_left = 243.0
margin_top = -1.0
margin_right = 259.0
margin_bottom = 15.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
stretch_mode = 2

[node name="load1" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 48.0
margin_top = 63.0
margin_right = 190.0
margin_bottom = 132.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="load1" type="TextureButton" parent="base/degra/base2/load/base4/load1"]
margin_left = 9.0
margin_top = 11.0
margin_right = 25.0
margin_bottom = 27.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="load2" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 48.0
margin_top = 112.0
margin_right = 190.0
margin_bottom = 181.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="load2" type="TextureButton" parent="base/degra/base2/load/base4/load2"]
margin_left = 8.0
margin_top = 12.0
margin_right = 24.0
margin_bottom = 28.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="load3" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 48.0
margin_top = 160.0
margin_right = 190.0
margin_bottom = 229.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="load3" type="TextureButton" parent="base/degra/base2/load/base4/load3"]
margin_left = 7.0
margin_top = 12.0
margin_right = 23.0
margin_bottom = 28.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="save1" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 145.0
margin_top = 63.0
margin_right = 287.0
margin_bottom = 132.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="save1" type="TextureButton" parent="base/degra/base2/load/base4/save1"]
margin_left = 11.3333
margin_top = 11.0
margin_right = 27.3333
margin_bottom = 27.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="save2" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 145.0
margin_top = 112.0
margin_right = 287.0
margin_bottom = 181.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="save2" type="TextureButton" parent="base/degra/base2/load/base4/save2"]
margin_left = 10.3333
margin_top = 12.0
margin_right = 26.3333
margin_bottom = 28.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="save3" type="NinePatchRect" parent="base/degra/base2/load/base4"]
margin_left = 145.0
margin_top = 161.0
margin_right = 287.0
margin_bottom = 230.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 17 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="save3" type="TextureButton" parent="base/degra/base2/load/base4/save3"]
margin_left = 9.33334
margin_top = 10.3333
margin_right = 25.3333
margin_bottom = 26.3333
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="name" type="Container" parent="base"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -44.0
margin_right = 119.5
margin_bottom = 43.0

[node name="back" type="NinePatchRect" parent="base/name"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="form" type="Container" parent="base/name/back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = -36.5
margin_right = 112.0
margin_bottom = 37.5

[node name="title" type="Label" parent="base/name/back/form"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.605469, 0.402051, 0.347672, 1 )
text = "New Name:"

[node name="new_name" type="LineEdit" parent="base/name/back/form"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -2.0
margin_bottom = 24.0
theme = ExtResource( 20 )
placeholder_text = "Make Your Choice!"

[node name="return" type="TextureButton" parent="base/name/back/form"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_bottom = 16.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="new_name" type="Label" parent="base/name/back"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 1.68866
margin_right = 28.0
margin_bottom = 17.6887
rect_scale = Vector2( 1.6, 1.6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.605469, 0.402051, 0.347672, 1 )
text = "New Name"
align = 1
uppercase = true

[node name="welcome" type="Label" parent="base/name/back"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -28.3113
margin_right = 1.0
margin_bottom = -12.3113
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.605469, 0.402051, 0.347672, 1 )
text = "Boa sorte!!"
align = 1
uppercase = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 504.434, 299.38 )
zoom = Vector2( 0.5, 0.4 )

[node name="wait" type="Timer" parent="."]

[connection signal="pressed" from="base/degra/base2/novo_jogo" to="." method="_on_novo_jogo_pressed"]
[connection signal="pressed" from="base/degra/base2/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="base/degra/base2/op" to="." method="_on_op_pressed"]
[connection signal="toggled" from="base/degra/base2/op/base3/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="base/degra/base2/op/base3/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="base/degra/base2/op/base3/300sg" to="." method="_on_300sg_toggled"]
[connection signal="toggled" from="base/degra/base2/op/base3/600sg" to="." method="_on_600sg_toggled"]
[connection signal="pressed" from="base/degra/base2/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/fechar_load" to="." method="_on_fechar_load_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/load1/load1" to="." method="_on_load1_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/load2/load2" to="." method="_on_load2_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/load3/load3" to="." method="_on_load3_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/save1/save1" to="." method="_on_save1_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/save2/save2" to="." method="_on_save2_pressed"]
[connection signal="pressed" from="base/degra/base2/load/base4/save3/save3" to="." method="_on_save3_pressed"]
[connection signal="text_entered" from="base/name/back/form/new_name" to="." method="new_name"]
[connection signal="pressed" from="base/name/back/form/return" to="." method="return_new"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
